deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: platform-facilitator
  name: platform-facilitator
  namespace: acedatacloud
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    app: platform-facilitator
